# Upload-service

./: .clang-format  .gitignore  .gitlab-ci.yml  README.md  nginx.conf  www.sql
cgi-download/: c.sh  main.cpp
cgi-upload/: main.cpp
cgi-v2/: CMakeLists.txt
cgi-v2/src/: cgi.cpp  cgi.h  common.cpp  common.h  log.cpp  log.h  main.cpp  md5.cpp  md5.h  webdownload.cpp  webdownload.h  webupload.cpp  webupload.h  webworker.cpp  webworker.h
upload-client/: .gitignore  CMakeLists.txt  build-windows.sh  del-makefile  installer.nsi  make-lang  make-macx  upload-client.pro  version.cmake
upload-client/3dpatry/qtsingleapplication/: qtsingleapplication.pro
upload-client/3dpatry/qtsingleapplication/src/: qtlocalpeer.cpp  qtsingleapplication.pri
upload-client/3dpatry/quazip/: CMakeLists.txt  quazip.pro
upload-client/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_qaskwnd.cpp  moc_qtlocalpeer.cpp  moc_qtsingleapplication.cpp  moc_quazipfile.cpp  moc_u_api.cpp  moc_u_common.cpp  moc_u_core.cpp  moc_u_update.cpp  moc_u_upload.cpp  moc_ui_about.cpp  moc_ui_askwindow.cpp  moc_ui_init.cpp  moc_ui_main.cpp  moc_ui_settings.cpp  moc_ui_update.cpp  moc_ui_upload.cpp  moc_ui_wdg_btnlabel.cpp  moc_ui_wdg_flist.cpp  moc_ui_wdg_ulist.cpp  moc_ui_zip_files.cpp  ui_ui_about.h  ui_ui_askwindow.h  ui_ui_init.h  ui_ui_main.h  ui_ui_settings.h  ui_ui_update.h  ui_ui_upload.h  ui_ui_zip_files.h  upload-client_automoc.cpp
upload-client/etc/: Upload Files.desktop
upload-client/lang/: lang.qrc  ru.qm  ru.ts
upload-client/res/: app.rc  res.qrc
upload-client/src/: global.h  main.cpp  md5.cpp  md5.h  qaskwnd.cpp  qaskwnd.h  u_api.cpp  u_api.h  u_common.cpp  u_common.h  u_core.cpp  u_core.h  u_update.cpp  u_update.h  u_upload.cpp  u_upload.h  ui_about.cpp  ui_about.h  ui_about.ui  ui_askwindow.cpp  ui_askwindow.h  ui_askwindow.ui  ui_init.cpp  ui_init.h  ui_init.ui  ui_main.cpp  ui_main.h  ui_main.ui  ui_settings.cpp  ui_settings.h  ui_settings.ui  ui_update.cpp  ui_update.h  ui_update.ui  ui_upload.cpp  ui_upload.h  ui_upload.ui  ui_wdg_btnlabel.cpp  ui_wdg_btnlabel.h  ui_wdg_flist.cpp  (+7 more)
www/: .htaccess  index.php
www/captcha/: index.php  kcaptcha_config.php
www/cgi-upload/: c.sh  md5.cpp
www/core/: config.php  config.sample.php  ext.php  mime.types  siteconfig.php  ttl.php
www/core/auth/: internal.php  none.php  phpbb.php
www/core/cron/: cron_init.php  del_files.php  stat.php  upd_md5.php
www/core/includes/: class.attach.php  class.captcha.php  class.cform.php  class.core.php  class.kdb.php  class.ldb.php  class.ldb_migration.php  class.lform.php  class.ltable.php  class.ltpl.php  class.module_template.php  class.tablegen.php  class.tpl.php  func.main.php  func.upload.php  init_lang.php  init_rewrite.php  tmp_file.php
www/core/lang/: ru.php
www/core/modules/: mod_api.php  mod_f.php  mod_files.php  mod_index.php  mod_page.php  mod_upload.php  mod_user.php
www/core/php-mailer/: class.phpmailer.php
www/tmp/: .htaccess
www/tmp/attach_thumb/: dir.txt
www/tpl/: ge_403.tpl  login_register.tpl  upload.tpl
www/tpl/file-upload/: fileuploader.css
www/web/: file.php  index.php
www/web/tpl/: download-file-item.tpl  download-file.tpl  ge_404.tpl  index.tpl  login_form.tpl  login_form_inline.tpl  myfiles.tpl  redirect_msg.tpl  upload.tpl
www/web/tpl/css/: style.css
www/web/tpl/file-upload/: fileuploader.css  fileuploader.js
